2004-06-30  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Acquire inode->i_sem before open and release methods to prevent
	concurrent rename or unlink operations.

2004-06-27  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix file offset wrap around at 4G when doing large reads

2004-06-24  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix memory leak in open (Valient Gough)

2004-06-24  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Add "close after delete" support to libfuse (patch by Valient
	Gough)

	* Cancel all worker threads before exit in multithreaded mode

2004-06-23  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix locking bugs

	* Don't send reply to RELEASE

	* Work with newer libtool (1.5a)

	* Check for st_atim member of struct stat
	
2004-06-22  Miklos Szeredi <mszeredi@inf.bme.hu>

	* No request allocation needed on inode and file release
	
2004-06-21  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix possible inode leak in userspace in case of unfinished
	lookup/mknod/mkdir/symlink/link operation.
	
2004-06-20  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Fix some races and cleanups in fuse_read_super()
	
2004-06-19  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Requests are allocated at open time
	
2004-06-03  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Build shared library as well as static (using libtool)

	* Change FUSE_MINOR_VERSION from 1 to 0.  I know it's illegal but
	there has not been a release with the previous minor number, and I
	hope nobody is using it for anything.

	* Change fuse_main(), so that default behavior is to go into
	background if mount is successful.  '-f' and '-d' options disable
	backgrounding.  This fixes the "Why does my FUSE daemon hang?"
	newbie complaint.

	* Cache ENOSYS (function not implemented) errors on *xattr, flush
	and fsync

	* Don't call getdir method from open() only from first readdir().
	Open is sometimes just used to store the current directory
	(e.g. find)
	
2004-05-18  Miklos Szeredi <mszeredi@inf.bme.hu>

	* Added flush() call
	